Rework basic directory structure. Remove default IntelliJ JavaFX program. Do basic layout and sidebar. Add JavaPackager Maven module for less headaches.